fix navbar bug and improved navbar alignments

--- a/static/website-files/nav_bar.css
+++ b/static/website-files/nav_bar.css
@@ -26,7 +26,6 @@ ul {
     top: 0;
     position: -webkit-sticky;
     width: 100%;
-    height: 10%;
 }
 
 
@@ -35,8 +34,9 @@ ul {
 .logo {
     display: inline-block;
     color: var(--STRAK);
-    font-size: 50px;
-    margin-left: 10px;
+    font-size: 40px;
+    margin-left: 8px;
+    padding-top: 5px;
 }
 
 
@@ -72,7 +72,7 @@ ul {
 .hamb {
     cursor: pointer;
     float: right;
-    padding: 40px 10px;
+    padding: 30px 15px;
 }
 
 .hamb-line {
@@ -131,6 +131,16 @@ ul {
 /* Responsiveness */
 
 @media (min-width: 768px) {
+    .header{
+        height: 10%;
+    }
+    .hamb{
+        padding: 40px 10px;
+    }
+    .logo{
+        font-size: 50px;
+        padding-top: 0px;
+    }
     .nav {
         max-height: none;
         top: 0;
